[version bump] +4 :: add an intro - present url for bug reports

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 script:    ./gmail-group.sh
-before_script: ./.before_script.sh
+before_script: ./.before_script.sh 
 after_script:  ./.after_script.sh
 branches:
   only:
       - master
 env:
-  global:
-      - CAMPFIRE_TOKEN=abc123
-      - TIMEOUT=1000
+#  global:
+#      - CAMPFIRE_TOKEN=abc123
+#      - TIMEOUT=1000
   matrix:
       - USE_NETWORK=true
-#    http://docs.travis-ci.com/user/build-configuration/
+#GOOD TO KNOW:
+# http://docs.travis-ci.com/user/build-configuration/
 #
