[travis] Added .deb dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
-script:    ./gmail-group.sh
+
+before_install:
+#  - sudo apt-get update -qq
+  - sudo apt-get install -y gxmessage libnotify-bin gmail-notify curl vim-gtk pv
+
 before_script: ./.before_script.sh 
+script:    ./gmail-group.sh
 after_script:  ./.after_script.sh
 branches:
   only:
