[travis] updated + [screencast] mv to dir: SCHENARIOS

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - sudo apt-get install -y gxmessage libnotify-bin gmail-notify curl vim-gtk pv cowsay toilet figlet
 
 
-before_script: ./.before_script.sh 
+#before_script: ./.before_script.sh 
 script:    ./gmail-group.sh
 after_script:  ./.after_script.sh
 branches:
