--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ before_install:
   - sudo apt-get install -y gxmessage libnotify-bin gmail-notify curl vim-gtk pv cowsay toilet figlet
 
 
-#before_script: ./.before_script.sh 
-script: bash -c ./gmail-group.sh
+before_script: ./.before_script.sh 
+script: bash -c ./gmail_group.sh
 after_script:  bash -c ./.after_script.sh
 branches:
   only:
