--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 
-before_install:
+#before_install:
 #  - sudo apt-get update -qq
-  - sudo apt-get install -y gxmessage libnotify-bin gmail-notify curl vim-gtk pv cowsay toilet figlet
+#- sudo apt-get install -y  `gxmessage libnotify-bin gmail-notify curl vim-gtk pv cowsay toilet figlet sox libsox-fmt-mp3`
+  
 
 
 before_script: ./.before_script.sh 
