[merge master] for getting the lpi material

--- a/helper.cfg
+++ b/helper.cfg
@@ -13,13 +13,25 @@ run_dir(){
     if [ -n "$dir" ] && [ -d "$dir" ];then
         pushd $dir >/dev/null
         echo "[pwd] $PWD"
-        ./menu.sh
+        build_menu meta
         popd >/dev/null
     else
         echo "[error] not a dir: $dir"
     fi
 }
+build_menu(){
+    update_clipboard "vi $file"
+    local file=$1
+    if [ -f $file ];then
+        print_color 32 "[MENU.META] exist"
+        ls -1 $file
+    else
+        print_color 31 "[MENU.META] not exist"
+    fi
+}
+
+
 export -f run_dir
 export  -f where_am_i
 export ZENITY="--height=400"
-export GXMESSAGE="-ontop -sticky -timeout 10 -wrap"
+export GXMESSAGE="-ontop -sticky -wrap -timeout 10"
