[gmail_group] support multiple translation

--- a/helper.cfg
+++ b/helper.cfg
@@ -13,7 +13,8 @@ run_dir(){
     if [ -n "$dir" ] && [ -d "$dir" ];then
         pushd $dir >/dev/null
         echo "[pwd] $PWD"
-        build_menu meta
+    #    build_menu meta
+    ./menu.sh
         popd >/dev/null
     else
         echo "[error] not a dir: $dir"
