[setup.cfg] add it to .gitignore

--- a/.setup.example.cfg
+++ b/.setup.example.cfg
@@ -2,8 +2,8 @@ FAILURE=1
 SUCCESS=0
 ################################### gmail ###############################
 nickname=${LOGNAME:-''}
-user=${GMAIL_USER:-'advance.linux2'} #env
-password=${GMAIL_PASSWORD:-'advance.linux'} #env
+user=${GMAIL_USER:-''} #env
+password=${GMAIL_PASSWORD:-''} #env
 from=$user@gmail.com
 to=$user@gmail.com
 #===================================tmp files============================
